Skeleton structure for Maths

--- a/modules/maths.tex
+++ b/modules/maths.tex
@@ -1,1 +1,30 @@
-\section{Vectors}
+\section{Vectors and Matrices}
+\subsection{Vector Operations}
+\subsection{Matrix Operations}
+\newpage
+\section{Fields}
+\subsection{Notes}
+\subsection{Proofs}
+\newpage
+\section{Lines and Planes}
+\subsection{Notes}
+\subsection{Examples}
+\newpage
+\section{Set Theory}
+\subsection{Notes}
+\subsection{Examples}
+\newpage
+\section{Functions}
+\subsection{Notes}
+\subsection{Examples}
+\newpage
+\section{Probability}
+\subsection{Notes}
+\subsection{Examples}
+\newpage
+\section{Random Variables}
+\subsection{Discrete}
+\subsection{Continuous}
+\subsection{Examples}
+\newpage
+\section{Equations}
