WIP maths, finished vector equations

--- a/modules/maths.tex
+++ b/modules/maths.tex
@@ -1,30 +1,69 @@
 \section{Vectors and Matrices}
+This section deals with operations on vectors and matrices that are commonly used.
 \subsection{Vector Operations}
+	\textbf{Magnitude}
+	\begin{equation}
+	\left\|   \vec{V} \right\|  = \sqrt{\sum_{i=1}^{n} v_i^2}
+	\end{equation}
+	\textbf{Dot Product}
+	\begin{equation}
+	\vec{V} \cdot \vec{U} = \sum_{i=1}^{n} v_iu_i
+	\end{equation}
+	\textbf{3x3 Cross Product}
+\begin{equation}
+	\vec{V} \times \vec{U} = \begin{bmatrix}
+		v_2u_3 - v_3u_2\\ 
+		v_3u_1 - v_1u_3\\ 
+		v_1u_2 - v_2u_1
+	\end{bmatrix}
+\end{equation}
+	\textbf{Equations with angles}
+		\begin{equation}
+		\cos{\theta} = \frac{\vec{V} \cdot \vec{U}}{\left\| \vec{V} \right\| \left\| \vec{U} \right\| }
+		\end{equation}
+		\begin{equation}
+		\sin{\theta} = \frac{\vec{V} \times \vec{U}}{\left\| \vec{V} \right\| \left\| \vec{U} \right\| }
+		\end{equation}
 \subsection{Matrix Operations}
+\textbf{Multiply}
+\begin{equation}
+a x b = coming soon
+\end{equation}
+\textbf{2x2 Determinant}
+\textbf{3x3 Determinant}
+\textbf{Row Operations}
+\textbf{Inverting a Matrix}
 \newpage
 \section{Fields}
+This section deals with the little we need to know about Galois Fields, primarily GF(2).
 \subsection{Notes}
 \subsection{Proofs}
 \newpage
 \section{Lines and Planes}
+This section covers everything done regarding systems of equations regarding lines and planes.
 \subsection{Notes}
 \subsection{Examples}
 \newpage
 \section{Set Theory}
+This section covers the basics of Set Theory, with some examples.
 \subsection{Notes}
 \subsection{Examples}
 \newpage
 \section{Functions}
+Expanding from Set Theory, this section deals with Functions and our new understanding of them.
 \subsection{Notes}
 \subsection{Examples}
 \newpage
 \section{Probability}
+Continuing from Year 1 AI, probability.
 \subsection{Notes}
 \subsection{Examples}
 \newpage
 \section{Random Variables}
+This section deals with the handling of both discrete and continuous random variables. Don't go gambling after you cover this section.
 \subsection{Discrete}
 \subsection{Continuous}
 \subsection{Examples}
 \newpage
 \section{Equations}
+Appending-like area to store all equations that will likely be used in the exam.
