--- a/studyguide.tex
+++ b/studyguide.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage{subfiles}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage[headsep=0mm]{geometry}
@@ -22,7 +23,7 @@
 \setlength{\parskip}{0pt}
 \setlength{\intextsep}{12pt}
 \setlist{nolistsep}
-\setitemize{itemsep=0pt}
+\setitemize{itemsep=2pt}
 \geometry{
 	a4paper,
 	total={170mm,257mm},
